--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -14,7 +14,8 @@
             studying graphic design and web development. Whilst I have a general 
             understanding of the basics of code, this is definitley the 
             <b>most</b> 
-            coding I've done.
+            coding I've done. I think the last time I coded was late middle school/early highschool,
+            when we would play around on basic coding websites, like <www class="code org">www.code.org</www>
         </p>
 
         <p>
