--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -10,16 +10,19 @@
 
         <p>
             I am a student at 
-            <u>FIRST</u>
-            studying graphic design and web development. Whilst I have a general 
-            understanding of the basics of code, this is definitley the 
+            <b>FIRST</b>
+            studying 
+            <u>graphic design and web development</u>. 
+            Whilst I have a general understanding of the basics of code, this is definitley the 
             <b>most</b> 
             coding I've done. I think the last time I coded was late middle school/early highschool,
-            when we would play around on basic coding websites, like <www class="code org">www.code.org</www>
+            when we would play around on basic coding websites, like 
+            <i>www.code.org</i>
         </p>
 
         <p>
-            I'm so excited to learn more and see where this class takes me!
+            I'm so excited to learn more and see where this class takes me! My teachers have been such a
+            big help.
         </p>
 
         <p>
