--- a/demos/images-demo/index.html
+++ b/demos/images-demo/index.html
@@ -9,13 +9,25 @@
 
         <p>
             <h1>Copy and paste image address</h1>
-            <h4> <i>Use <u>width=""</u> to change size. View formatting in code.</i> </h4>
+            <h4> Use <u>width="#"</u> to change size. View formatting in code. </h4>
         </p>
 
         <img
             src="https://images.pexels.com/photos/17428217/pexels-photo-17428217/free-photo-of-grand-hotel-on-sea-shore-in-llandudno.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             width="400"
             alt="A hotel-like building sitting on a body of water with a rocky mountain terrain in the background"
+        >
+
+        <br>
+
+        <p>
+            <h1>Import images into folders within Studio Code</h1>
+            <h4> Use <u>src="foldername/imagename.jpg"</u> to import local image.</h4>
+        </p>
+        <img
+            src="images/peopleswim.jpg"
+            width="400"
+            alt="A girl swimming above a boy, both of them underwater with beams of sunshine reflecting down around them both"
         >
     </body>
 </html>
