--- a/exercises/wiki-page-1/index.html
+++ b/exercises/wiki-page-1/index.html
@@ -6,45 +6,112 @@
         <title>Wiki Page 1</title>
     </head>
     <body>
-
+        
         <p>
             <h1>Crown shyness</h1>
             <hr>
             <h5>From Wikipedia, the free encyclopedia</h5>
         </p>
-
         <p>
             <i>For the album by Trash Boat, see Crown Shyness (album)</i>
         </p>
-
         <p>
             <b>Crown shyness</b> (also <i>canopy disengagement</i>,<sup>[1]</sup> <i>canopy shyness</i>,<sup>[2]</sup> or <i>inter-crown spacing</i><sup>[3]</sup>) is a phenomeon observed in some tree species, in which the crowns of fully stocked trees do not touch each other, forming a canopy with channel-like gaps.<sup>[4][5]</sup> The phenomenon is most prevalent among trees of the same species, but also occurs between trees of different species.<sup>[6][7]</sup> There exist many hypotheses as to why crown shyness is an adaptive behavior, and research suggests that it might inhibit spread of leaf-eating insect larvae.<sup>[8]</sup>
         </p>
-
         <br>
-
         <p>
             <b>Contents</b>
         </p>
-
         <ul>
-            <li>Possible physiological explanations</li>
-            <li>Species</li>
-            <li>References</li>
-            <li>External Links</li>
+            <li>
+                Possible physiological explanations
+            </li>
+            <li>
+                Species
+            </li>
+            <li>
+                References
+            </li>
+            <li>
+                External Links
+            </li>
         </ul>
-
         <br>
         <br>
-
         <h3>Possible physiological explanations</h3>
         <hr>
-
         <img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Dryobalanops_Aromatica_canopy.jpg/300px-Dryobalanops_Aromatica_canopy.jpg"
             width="310"
             alt="Trees displaying crown shyness"
         >
-        
+        <p>
+            The exact physiological basis of crown shyness is uncertain.<sup>[6]</sup> It has been discussed in scientific literature since the 1920s.<sup>[9]</sup> The variety of hypotheses and experimental results might suggest that there are multiple mechanisms across different species, an example of convergent evolution.<sup>[citation needed]</sup>
+        </p>
+        <p>
+            Some hypotheses contend that the interdigitation of canopy branches leads to "reciprocal pruning" of adjacent trees. Trees in windy areas suffer physical damage as they collide with each other during winds. As the result of abrasions and collisions, there is an induced crown shyness response. Studies suggest that lateral branch growth is largely uninfluenced by neighbours until disturbed by mechanical abrasion.<sup>[10]</sup> If the crowns are artificially prevented from colliding in the winds, they gradually fill the canopy gaps.<sup>[11]</sup> This explains instances of crown shyness between branches of the same organism. Proponents of this idea cite that shyness is particularly seen in conditions conducive to this pruning, including windy forests, stands of flexible trees, and early succession forests where branches are flexible and limited in lateral movement.<sup>[6][12]</sup> By this explanation, variable flexibility in lateral branches has a large bearing on the degree of crown shyness.
+        </p>
+        <br>
+        <br>
+        <h3>Species</h3>
+        <hr>
+        <p>
+            Trees that display crown shyness patterns include:
+        </p>
+        <ul>
+            <li>
+                Species of <i>Dryobalanops</i>, including <i>Dryobalanops lanceolata</i><sup>[23]</sup> and <i>Dryobalanops aromatica</i> (kapur)
+            </li>
+            <li>
+                Some species of <i>eucalypt</i><sup>[24]</sup>
+            </li>
+            <li>
+                <i>Pinus contorta</i> or lodgepole pine<sup>[1]</sup>
+            </li>
+            <li>
+                <i>Avicennia germinans</i> or black mangrove<sup>[3]</sup>
+            </li>
+            <li>
+                <i>Schefflera pittieri</i><sup>[6][12]</sup>
+            </li>
+            <li>
+                <i>Clusia alata</i><sup>[6][12]</sup>
+            </li>
+            <li>
+                K. Paijmans observed crown shyness in a multi-species group of trees, comprising    <i>Celtis spinosa</i> and <i>Pterocymbium beccarii</i><sup>[7]</sup>
+            </li>
+        </ul>
+        <br>
+        <br>
+        <h3>References</h3>
+        <hr>
+        <ol>
+            <li>
+                Goudie, James W.; Polsson, Kenneth R.; Ott, Peter K. (2008). <i>"An empirical model of crown shyness for lodgepole pine (Pinus contorta var. latifolia [Engl.] Critch.) in British Columbia"</i>.
+            </li>
+            <li>
+                Peter Thomas; John Packham (26 July 2007). <i>Ecology of Woodlands and Forests: Description, Dynamics and Diversity</i>.
+            </li>
+            <li>
+                Putz, Francis E.; Parker, Geoffrey G.; Archibald, Ruth M. (1984). <i>"Mechanical Abrasion and Intercrown Spacing"</i>.
+            </li>
+            <li>
+                Norsiha A. and Shamsudin (2015-04-25). <i>"Shorea resinosa : Another jigsaw puzzle in the sky"</i>.
+            </li>
+            <li>
+                Fish, H; Lieffers, VJ; Silins, U; Hall, RJ (2006). <i>"Crown shyness in lodgepole pine stands of varying stand height, density and site index in the upper foothills of Alberta"</i>.
+            </li>
+            <li>
+                There are literally 19 more references that I am too tired to code right now.
+            </li>
+        </ol>
+        <br>
+        <br>
+        <h3>External Links</h3>
+        <hr>
+        <ul>
+            <li>Media related to <i>Crown shyness</i> at Wikimedia Commons</li>
+        </ul>
+
     </body>
 </html>
