--- a/exercises/wiki-page-1/index.html
+++ b/exercises/wiki-page-1/index.html
@@ -20,21 +20,14 @@
         </p>
         <br>
         <p>
-            <b>Contents</b>
+            <h4>Contents</h4>
         </p>
         <ul>
-            <li>
-                Possible physiological explanations
-            </li>
-            <li>
-                Species
-            </li>
-            <li>
-                References
-            </li>
-            <li>
-                External Links
-            </li>
+            <li>Possible physiological explanations</li>
+            <li> Species</li>
+            <li>References</li>
+            <li>External Links</li>
+            
         </ul>
         <br>
         <br>
@@ -55,6 +48,11 @@
         <br>
         <h3>Species</h3>
         <hr>
+        <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/River_of_Blue.jpg/300px-River_of_Blue.jpg"
+            width="310"
+            alt="Trees in Argentina displaying crown shyness"
+        >
         <p>
             Trees that display crown shyness patterns include:
         </p>
@@ -87,22 +85,76 @@
         <hr>
         <ol>
             <li>
-                Goudie, James W.; Polsson, Kenneth R.; Ott, Peter K. (2008). <i>"An empirical model of crown shyness for lodgepole pine (Pinus contorta var. latifolia [Engl.] Critch.) in British Columbia"</i>.
+                Goudie, James W.; Polsson, Kenneth R.; Ott, Peter K. (2008). <i>"An empirical model of crown shyness for lodgepole pine (Pinus contorta var. latifolia [Engl.] Critch.) in British Columbia"</i>
             </li>
             <li>
                 Peter Thomas; John Packham (26 July 2007). <i>Ecology of Woodlands and Forests: Description, Dynamics and Diversity</i>.
             </li>
             <li>
-                Putz, Francis E.; Parker, Geoffrey G.; Archibald, Ruth M. (1984). <i>"Mechanical Abrasion and Intercrown Spacing"</i>.
+                Putz, Francis E.; Parker, Geoffrey G.; Archibald, Ruth M. (1984). <i>"Mechanical Abrasion and Intercrown Spacing"</i>
             </li>
             <li>
-                Norsiha A. and Shamsudin (2015-04-25). <i>"Shorea resinosa : Another jigsaw puzzle in the sky"</i>.
+                Norsiha A. and Shamsudin (2015-04-25). <i>"Shorea resinosa : Another jigsaw puzzle in the sky"</i>
             </li>
             <li>
-                Fish, H; Lieffers, VJ; Silins, U; Hall, RJ (2006). <i>"Crown shyness in lodgepole pine stands of varying stand height, density and site index in the upper foothills of Alberta"</i>.
+                Fish, H; Lieffers, VJ; Silins, U; Hall, RJ (2006). <i>"Crown shyness in lodgepole pine stands of varying stand height, density and site index in the upper foothills of Alberta"</i>
             </li>
             <li>
-                There are literally 19 more references that I am too tired to code right now.
+                Rebertus, Alan J (1988). <i>"Crown shyness in a tropical cloud forest"</i>
+            </li>
+            <li>
+                K. Paijmans (1973). <i>"Plant Succession on Pago and Witori Volcanoes, New Britain"</i>
+            </li>
+            <li>
+                <i>"Tropical Rain Forest"</i>. Woodland Park Zoo
+            </li>
+            <li>
+                <i>"TASS III: Simulating the management, growth and yield of complex stands"</i>
+            </li>
+            <li>
+                Franco, M (14 August 1986). <i> "The influences of neighbours on the growth of modular organisms with an example from trees"</i>
+            </li>
+            <li>
+                Victor Lieffers. <i>"Crown shyness in maturing boreal forest stands"</i>
+            </li>
+            <li>
+                Lawton, RO; Putz, Francis E. <i>"The vegetation of the Monteverde Cloud Forest Reserve"</i>
+            </li>
+            <li>
+                Maxwell Ralph Jacobs (1955). <i>Growth Habits of the Eucalypts</i>.
+            </li>
+            <li>
+                M. Franco (14 August 1986). <i>"The Influences of Neighbours on the Growth of Modular Organisms with an Example from Trees"</i>
+            </li>
+            <li>
+                Wilson, J. Bastow; Agnew, Andrew D.Q.; Roxburgh, Stephen H. (2019). <i>"2: Interactions between Species"</i>
+            </li>
+            <li>
+                Ballaré, CL; Scopel, AL; Sánchez, RA (19 January 1990). <i>"Far-red radiation reflected from adjacent leaves: an early signal of competition in plant canopies"</i>
+            </li>
+            <li>
+                Ballare, C. L.; Sanchez, R. A.; Scopel, Ana L.; Casal, J. J.; Ghersa, C. M. (September 1987). <i>"Early detection of neighbour plants by phytochrome perception of spectral changes in reflected sunlight"</i>
+            </li>
+            <li>
+                Ballaré, CL; Scopel, AL; Sánchez, RA (June 1997). <i>"Foraging for light: photosensory ecology and agricultural implications"</i>
+            </li>
+            <li>
+                Jansen, Marcel AK; Gaba, Victor; Greenberg, Bruce M (April 1998). <i>"Higher plants and UV-B radiation: balancing damage, repair and acclimation"</i> 
+            </li>
+            <li>
+                Christie, JM; Reymond, P; Powell, GK; Bernasconi, P; Raibekas, AA; Liscum, E; Briggs, WR (27 November 1998). <i>"Arabidopsis NPH1: a flavoprotein with the properties of a photoreceptor for phototropism"</i>
+            </li>
+            <li>
+                F.S.P. Ng (1997). <i>"Shyness in trees"</i>
+            </li>
+            <li>
+                Crepy, María A.; Casal, Jorge J. (January 2015). <i>"Photoreceptor-mediated kin recognition in plants"</i>
+            </li>
+            <li>
+                Margaret Lowman; Soubadra Devy; T. Ganesh (22 June 2013). <i>Treetops at Risk: Challenges of Global Canopy Ecology and Conservation</i>.
+            </li>
+            <li>
+                R. G. Florence (January 2004). <i>Ecology and Silviculture of Eucalypt Forests</i>.
             </li>
         </ol>
         <br>
@@ -112,6 +164,7 @@
         <ul>
             <li>Media related to <i>Crown shyness</i> at Wikimedia Commons</li>
         </ul>
+        <h5>Categories: Plant morphology, Forest ecology</h5>
 
     </body>
 </html>
