wiki-page-2 final

--- a/exercises/wiki-page-2/index.html
+++ b/exercises/wiki-page-2/index.html
@@ -27,6 +27,15 @@
             <li>
                 <a href="#skills">Skils</a>
             </li>
+            <li>
+                <a href="#tools">Tools</a>
+            </li>
+            <li>
+                <a href="#relateddesignfields">Related design fields</a>
+            </li>
+            <li>
+                <a href="#occupations">Occupations</a>
+            </li>
         </ol>
         <br>
         <p>
@@ -334,5 +343,190 @@
         <p>
             A grid serves as a method of arranging both space and information, allowing the reader to easily comprehend the overall project. Furthermore, a grid functions as a container for information and a means of establishing and maintaining order. Despite grids being utilized for centuries, many graphic designers associate them with Swiss design. The desire for order in the 1940s resulted in a highly systematic approach to visualizing information. However, grids were later regarded as tedious and uninteresting, earning the label of "designersaur." Today, grids are once again considered crucial tools for professionals, whether they are novices or veterans.<sup>[36]</sup>
         </p>
+        <br>
+        <p>
+            <h2 id="tools">Tools</h2>
+        </p>
+        <hr>
+        <p>
+                In the mid-1980s
+            <a href="#">desktop publishing</a>
+                and graphic art software applications introduced computer image manipulation and creation capabilities that had previously been manually executed. Computers enabled designers to instantly see the effects of layout or typographic changes, and to simulate the effects of traditional media. Traditional tools such as
+            <a href="#">pencils</a>
+                can be useful even when computers are used for finalization; a designer or art director may sketch numerous concepts as part of the
+            <a href="#">creative process</a>.
+                <sup>[37]</sup> Styluses can be used with tablet computers to capture hand drawings digitally.<sup>[38]</sup>
+        </p>
+        <br>
+        <p>
+            <h3>Computers and software</h3>
+        </p>
+        <p>
+                Designers disagree whether computers enhance the creative process.<sup>[39]</sup> Some designers argue that computers allow them to explore multiple ideas quickly and in more detail than can be achieved by hand-rendering or
+            <a href="#">paste-up</a>.<sup>[40]</sup>
+                While other designers find the limitless choices from digital design can lead to paralysis or endless iterations with no clear outcome.
+        </p>
+        <p>
+                Most designers use a hybrid process that combines traditional and computer-based technologies. First, hand-rendered
+            <a href="#">layouts</a>
+                are used to get approval to execute an idea, then the polished visual product is produced on a computer.
+        </p>
+        <p>
+                Graphic designers are expected to be proficient in software programs for image-making, typography and layout. Nearly all of the popular and "industry standard" software programs used by graphic designers since the early 1990s are products of
+            <a href="#">Adobe Inc</a>
+            <a href="#">Adobe Photoshop</a>
+                (a
+            <a href="#">raster</a>-based
+                program for photo editing) and
+            <a href="#">Adobe Illustrator</a>
+                (a vector-based program for drawing) are often used in the final stage.
+            <a href="#">CorelDraw</a>,
+                a vector graphics editing software developed and marketed by
+            <a href="#">Corel Corporation</a>,
+                is also used worldwide. Designers often use pre-designed
+            <a href="#">raster images</a>
+                and
+            <a href="#">vector graphics</a>
+                in their work from online design databases. Raster images may be edited in Adobe Photoshop, vector logos and illustrations in Adobe Illustrator and CorelDraw, and the final product assembled in one of the major page layout programs, such as
+            <a href="#">Adobe InDesign</a>,
+            <a href="#">Serif PagePlus</a>
+                and
+            <a href="#">QuarkXPress</a>.
+        </p>
+        <p>
+                Many free and open-source programs are also used by both professionals and casual graphic designers.
+            <a href="#">Inkscape</a>
+                uses
+            <a href="#">Scalable Vector Graphics</a>
+                (SVG) as its primary file format and allows importing and exporting other formats. Other open-source programs used include
+            <a href="#">GIMP</a>
+                for photo-editing and image manipulation,
+            <a href="#">Krita</a>
+                for digital painting, and
+            <a href="#">Scribus</a>
+                for page layout.
+        </p>
+        <br>
+        <p>
+            <h2 id="relateddesignfields">Related design fields</h2>
+        </p>
+        <hr>
+        <p>
+            <h3>Interface design</h3>
+            <i>Main article:
+                <a href="#">User interface design</a>    
+            </i>
+        </p>
+        <p>
+                Since the advent of personal computers, many graphic designers have become involved in
+            <a href="#">interface design</a>,
+                in an environment commonly referred to as a
+            <a href="#">Graphical user interface</a>
+                (GUI). This has included
+            <a href="#">web design</a>
+                and
+            <a href="#">software design</a>
+                when
+            <a href="#">end user-interactivity</a>
+                is a design consideration of the layout or interface. Combining visual communication skills with an understanding of user interaction and online branding, graphic designers often work with
+            <a href="#">software developers</a>
+                and
+            <a href="#">web developers</a>
+                to create the
+            <a href="#">look and feel</a>
+                of a web site or
+            <a href="#">software application</a>.
+                An important aspect of interface design is
+            <a href="#">icon design</a>.
+            
+        </p>
+        <br>
+        <p>
+            <h3>User experience design</h3>
+            <i>Main article:
+                <a href="#">User experience design</a>    
+            </i>
+        </p>
+        <p>
+            User experience design (UX) is the study, analysis, and development of creating products that provide meaningful and relevant experiences to users. This involves the creation of the entire process of acquiring and integrating the product, including aspects of branding, design, usability, and function. UX design involves creating the interface and interactions for a website or application, and is considered both an act and an art. This profession requires a combination of skills, including visual design, social psychology, development, project management, and most importantly, empathy towards the end-users.<sup>[41]</sup>
+        </p>
+        <br>
+        <p>
+            <h3>Experiential graphic design</h3>
+        </p>
+        <p>
+            Experiential graphic design is the application of communication skills to the built environment.<sup>[42]</sup> This area of graphic design requires practitioners to understand physical installations that have to be manufactured and withstand the same environmental conditions as buildings. As such, it is a cross-disciplinary collaborative process involving designers, fabricators, city planners, architects, manufacturers and construction teams.
+        </p>
+        <p>
+                Experiential graphic designers try to solve problems that people encounter while interacting with buildings and space (also called environmental graphic design). Examples of practice areas for environmental graphic designers are
+            <a href="#">wayfinding</a>,
+            <a href="#">placemaking</a>,
+                branded environments, exhibitions and museum displays, public installations and digital environments.
+        </p>
+        <br>
+        <p>
+            <h2 id="occupations">Occupations</h2>
+        </p>
+        <hr>
+        <p>
+            <i>Main article:
+                <a href="#">Graphic design occupations</a>    
+            </i>
+        </p>
+        <p>
+                Graphic design career paths cover all parts of the
+            <a href="#">creative spectrum</a>
+                and often overlap. Workers perform specialized tasks, such as design services, publishing, advertising and public relations. As of 2023, median pay was $50,710 per year.<sup>[44]</sup> The main job titles within the industry are often country specific. They can include
+            <a href="#">graphic designer</a>,
+                art director, creative director, animator and entry level
+            <a href="#">production artist</a>.
+                Depending on the industry served, the responsibilities may have different titles such as
+            "<a href="#">DTP associate</a>"
+                or
+            "<a href="#">Graphic Artist</a>".
+                The responsibilities may involve specialized skills such as
+            <a href="#">illustration</a>,
+                photography, animation,
+            <a href="#">visual effects</a>
+                or
+            <a href="#">interactive design</a>.
+        </p>
+        <img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/National_Park_Service_sample_pictographs.svg/220px-National_Park_Service_sample_pictographs.svg.png"
+        alt="Graphic symbols are often functionalist and anonymous,[43] as these pictographs from the US National Park Service illustrate."
+        >
+        <p>
+            Employment in design of online projects was expected to increase by 35% by 2026, while employment in traditional media, such as newspaper and book design, expect to go down by 22%. Graphic designers will be expected to constantly learn new techniques, programs, and methods.<sup>[45]</sup>
+        </p>
+        <p>
+            Graphic designers can work within companies devoted specifically to the industry, such as design consultancies or branding agencies, others may work within publishing, marketing or other communications companies. Especially since the introduction of personal computers, many graphic designers work as in-house designers in non-design oriented organizations. Graphic designers may also work
+            <a href="#">freelance</a>,
+            working on their own terms, prices, ideas, etc.
+        </p>
+        <p>
+                A graphic designer typically reports to the
+            <a href="#">art director</a>,
+                creative director or
+            <a href="#">senior media creative</a>.
+                As a designer becomes more senior, they spend less time designing and more time leading and directing other designers on broader creative activities, such as brand development and
+            <a href="#">corporate identity</a>
+                development. They are often expected to interact more directly with clients, for example taking and interpreting briefs.
+        </p>
     </body>
+        <h3>Crowdsourcing in graphic design</h3>
+        <i>
+            Main article:
+                <a href="#">Crowdsourcing creative work</a>
+        </i>
+        <p>
+                Jeff Howe of
+            <a href="#">Wired Magazine</a>
+                first used the term
+            "<a href="#">crowdsourcing</a>"
+                in his 2006 article, "The Rise of Crowdsourcing."<sup>[46][47]</sup> It spans such creative domains as graphic design, architecture,
+            <a href="#">apparel design</a>,
+                writing, illustration, and others. Tasks may be assigned to individuals or a group and may be categorized as convergent or divergent. An example of a divergent task is generating alternative designs for a poster. An example of a convergent task is selecting one poster design. Companies, startups, small businesses and entrepreneurs have all benefitted from design crowdsourcing since it helps them source great graphic designs at a fraction of the budget they used to spend before. Getting a 
+            <a href="#">logo design</a>
+            t   hrough crowdsourcing being one of the most common. Major companies that operate in the design crowdsourcing space are generally referred to as design contest sites.<sup>[citation needed]</sup>
+        </p>
 </html>
