--- a/html-potluck/index.html
+++ b/html-potluck/index.html
@@ -25,149 +25,187 @@
         <hr>
         <br>
         <hr>
-        <h2 id="iwasntspeedingofficer">I wasn't speeding, officer</h2>
+        <h2 
+            id="iwasntspeedingofficer"> 
+            <u>I wasn't speeding, officer</u>
+        </h2>
             <p>
                 
-                <h4> <a href="https://soundcloud.com/g59/forthelasttime" target="_blank">
-                    <i class="fa-solid fa-play"></i> </a> NOW PLAYING:</h4>
+                <h4> 
+                    <a href="https://soundcloud.com/g59/forthelasttime" target="_blank">
+                        <i class="fa-regular fa-circle-play fa-fade"></i>
+                    </a> NOW PLAYING:
+                </h4>
                 <i class="fa-solid fa-music fa-bounce"></i>
-                <b>For the Last Time</b> <i>$uicideboy$</i> 2:36
+                <b>For the Last Time</b>
+                <i>$uicideboy$</i> 2:36
                 <i class="fa-solid fa-music fa-bounce"></i>
             </p>
             <img
                 src="images/FORTHELASTTIME_SuicideboyS.jpeg"
-                width="400"
+                width="200"
             >
         <p>
-            <img
-                src="images/IDGAF_GhostfacePlaya.jpeg"
-                width="50"
-                alt="album cover provided by SoundCloud"
-            >
+            <a href="https://soundcloud.com/ghostfaceplaya/i-dont-give-a-fuck-feat" target="_blank">
+                <img
+                    src="images/IDGAF_GhostfacePlaya.jpeg"
+                    width="50"
+                    alt="album cover provided by SoundCloud"
+                >
+            </a>
             <b>I Don't Give a F**k</b> <i>Ghostface Playa</i> 2:01
         </p>
         <p>
-            <img
-                src="images/AUDUBON_SuicideboyS.jpeg"
-                width="50"
-                alt="album cover provided by SoundCloud"
-            >
+            <a href="https://soundcloud.com/g59/audubon" target="_blank">
+                <img
+                    src="images/AUDUBON_SuicideboyS.jpeg"
+                    width="50"
+                    alt="album cover provided by SoundCloud"
+                >
+            </a>
             <b>Audubon</b> <i>$uicideboy$</i> 2:15
         </p>
         <p>
-            <img
-                src="images/YUNGBRATS_XXX.jpeg"
-                width="50"
-                alt="album cover provided by SoundCloud"
-            >
+            <a href="https://soundcloud.com/1805ex/xxxtentacion-yung-bratz" target="_blank">
+                <img
+                    src="images/YUNGBRATS_XXX.jpeg"
+                    width="50"
+                    alt="album cover provided by SoundCloud"
+                >
+            </a>
             <b>YuNg BrAtZ</b> <i>XXXTENTACION</i> 1:42
         </p>
         <p>
-            <img
-                src="images/HOME_MikeDimes.jpeg"
-                width="50"
-                alt="album cover provided by SoundCloud"
-            >
+            <a href="https://soundcloud.com/mikedimes/home" target="_blank">
+                <img
+                    src="images/HOME_MikeDimes.jpeg"
+                    width="50"
+                    alt="album cover provided by SoundCloud"
+                >
+            </a>
             <b>Home</b> <i>Mike Dimes</i> 2:55
         </p>
         <br>
         <hr>
-            <h2 id="staticrap">Static rap</h2>
+            <h2 
+                id="staticrap">
+                <u>Static rap</u>
+            </h2>
             <p>
-                <h4> <a href="https://soundcloud.com/malzmonday/mother-nature" target="_blank">
-                    <i class="fa-solid fa-play"></i> </a> NOW PLAYING:</h4>
+                <h4> 
+                    <a href="https://soundcloud.com/malzmonday/mother-nature" target="_blank">
+                        <i class="fa-regular fa-circle-play fa-fade"></i> 
+                    </a> NOW PLAYING:
+                </h4>
                 <i class="fa-solid fa-music fa-bounce"></i>
                 <b>Mother Nature</b> <i>Malz Mondays</i> 2:16
                 <i class="fa-solid fa-music fa-bounce"></i>
             </p>
             <img
                 src="images/MOTHERNATURE_MalzMondays.jpeg"
-                width="400"
+                width="200"
             >
             <p>
-            <img
-                src="images/IMMACONCEPT_MalzMondays.jpeg"
-                width="50"
-                alt="album cover provided by SoundCloud"
-            >
+            <a href="https://soundcloud.com/malzmonday/immaculate-conception" target="_blank">
+                <img
+                    src="images/IMMACONCEPT_MalzMondays.jpeg"
+                    width="50"
+                    alt="album cover provided by SoundCloud"
+                >
+            </a>
             <b>Immaculate Conception</b> <i>Malz Mondays</i> 2:49
         </p>
         <p>
-            <img
-                src="images/EZCOMEEZGO_MCMac.jpeg"
-                width="50"
-                alt="album cover provided by SoundCloud"
-            >
-            <b>EZ Come, EZ Go</b> <i>M.C. Mack</i> 4:09
+            <a href="https://www.youtube.com/watch?v=ZeV6_Mp4La0" target="_blank">
+                <img
+                    src="images/EZCOMEEZGO_MCMac.jpeg"
+                    width="50"
+                    alt="album cover provided by SoundCloud"
+                >
+            </a>
+            <b>Z Come, EZ Go</b> <i>M.C. Mack</i> 4:09
         </p>
         <p>
-            <img
-                src="images/04_SlimThug.jpeg"
-                width="50"
-                alt="album cover provided by SoundCloud"
-            >
+            <a href="https://www.youtube.com/watch?v=nr1-qMqmkMk" target="_blank">
+                <img
+                    src="images/04_SlimThug.jpeg"
+                    width="50"
+                    alt="album cover provided by SoundCloud"
+                >
+            </a>
             <b>04</b> <i>Slim Thug</i> 4:08
         </p>
         <p>
-            <img
-                src="images/JUKEBOXJOINTS_ASAPRocky.jpeg"
-                width="50"
-                alt="album cover provided by SoundCloud"
-            >
+            <a href="https://soundcloud.com/percxan/aap-rocky-jukebox-joints-ft-joe-fox-kanye-west" target="_blank">
+                <img
+                    src="images/JUKEBOXJOINTS_ASAPRocky.jpeg"
+                    width="50"
+                    alt="album cover provided by SoundCloud"
+                >
+            </a>
             <b>Jukebox Joints</b> <i>A$AP Rocky</i> 5:24
         </p>
         <br>
         <hr>
         <p>
-            <h2 id="timetorelax">Time to relax</h2>
-            <p>
-                <h4> <a href="https://soundcloud.com/shamanabeats/reckless" target="_blank">
-                    <i class="fa-solid fa-play"></i> </a> NOW PLAYING:</h4>
+            <h2 
+                id="timetorelax">
+                <u>Time to relax</u>
+            </h2>
+        <p>
+            <h4> 
+                <a href="https://soundcloud.com/shamanabeats/reckless" target="_blank">
+                    <i class="fa-regular fa-circle-play fa-fade"></i> 
+                </a> NOW PLAYING:
+                </h4>
                 <i class="fa-solid fa-music fa-bounce"></i>
                 <b>Reckless</b> <i>Shamana</i> 2:45
                 <i class="fa-solid fa-music fa-bounce"></i>
-            </p>
+        </p>
             <img
                 src="images/RECKLESS_Shamana.jpeg"
-                width="400"
+                width="200"
             >
-            <p>
-            <img
-                src="images/TELEPATIA_KaliUchis.jpeg"
-                width="50"
-                alt="album cover provided by SoundCloud"
-            >
+        <p>
+            <a href="https://soundcloud.com/kaliuchis/telepatia" target="_blank">
+                <img
+                    src="images/TELEPATIA_KaliUchis.jpeg"
+                    width="50"
+                    alt="album cover provided by SoundCloud"
+                >
+            </a>
             <b>Telepatía</b> <i>Kali Uchis</i> 2:49
         </p>
         <p>
-            <img
-                src="images/MEETTHEFROWNIES_MrTwinSister.jpg"
-                width="50"
-                alt="album cover provided by SoundCloud"
-            >
+            <a href="https://soundcloud.com/manosalvaudioengineer/mr-twin-sister-meet-the-frownies" taget="_blank">
+                <img
+                    src="images/MEETTHEFROWNIES_MrTwinSister.jpg"
+                    width="50"
+                    alt="album cover provided by SoundCloud"
+                >
+            </a>
             <b>Meet the Frownies</b> <i>Mr Twin Sister</i> 4:01
         </p>
         <p>
-            <img
-                src="images/LETGO_ArkPatrol.jpeg"
-                width="50"
-                alt="album cover provided by SoundCloud"
-            >
+            <a href="https://soundcloud.com/heroic/ark-patrol-let-go-ft-veronika-redd" target="_blank">
+                <img
+                    src="images/LETGO_ArkPatrol.jpeg"
+                    width="50"
+                    alt="album cover provided by SoundCloud"
+                >
+            </a>
             <b>Let Go (feat. Veronika Redd)</b> <i>Ark Patrol</i> 4:08
         </p>
         <p>
-            <img
-                src="images/LOTUSFLOWER_Radiohead.jpeg"
-                width="50"
-                alt="album cover provided by SoundCloud"
-            >
+            <a href="https://www.youtube.com/watch?v=gMA5jdxPL4s" target="_blank">
+                <img
+                    src="images/LOTUSFLOWER_Radiohead.jpeg"
+                    width="50"
+                    alt="album cover provided by SoundCloud"
+                >
+            </a>
             <b>Lotus Flower</b> <i>Radiohead</i> 5:00
         </p>
         <br>
-        <a href="https://soundcloud.com/shamanabeats/reckless">
-            <i class="fa-brands fa-soundcloud fa-2xl"></i></a>
-        <br>
-        <a href="https://soundcloud.com/shamanabeats/reckless" target="_blank">
-            <i class="fa-solid fa-play"></i> </a>
     </body>
 </html>
