html-potluck final

--- a/html-potluck/index.html
+++ b/html-potluck/index.html
@@ -11,6 +11,9 @@
             <h1>Kaelyn's Playlists</h1>
         </p>
         <hr>
+        <p>
+            Listen here:
+        </p>
         <ul>
             <li>
                 <a href="#iwasntspeedingofficer">I wasn't speeding, officer</a>
@@ -22,7 +25,6 @@
                 <a href="#timetorelax">Time to relax</a>
             </li>
         </ul>
-        <hr>
         <br>
         <hr>
         <h2 
