potluck-html final2

--- a/html-potluck/index.html
+++ b/html-potluck/index.html
@@ -25,6 +25,7 @@
                 <a href="#timetorelax">Time to relax</a>
             </li>
         </ul>
+
         <br>
         <hr>
         <h2 
@@ -43,10 +44,13 @@
                 <i>$uicideboy$</i> 2:36
                 <i class="fa-solid fa-music fa-bounce"></i>
             </p>
-            <img
-                src="images/FORTHELASTTIME_SuicideboyS.jpeg"
-                width="200"
-            >
+            <a href="https://soundcloud.com/g59/forthelasttime" target="_blank">
+                <img
+                    src="images/FORTHELASTTIME_SuicideboyS.jpeg"
+                    width="200"
+                    alt="album cover provided by SoundCloud"
+                >
+            </a>
         <p>
             <a href="https://soundcloud.com/ghostfaceplaya/i-dont-give-a-fuck-feat" target="_blank">
                 <img
@@ -103,10 +107,13 @@
                 <b>Mother Nature</b> <i>Malz Mondays</i> 2:16
                 <i class="fa-solid fa-music fa-bounce"></i>
             </p>
-            <img
-                src="images/MOTHERNATURE_MalzMondays.jpeg"
-                width="200"
-            >
+            <a href="https://soundcloud.com/malzmonday/mother-nature" target="_blank">
+                <img
+                    src="images/MOTHERNATURE_MalzMondays.jpeg"
+                    width="200"
+                    alt="album cover provided by SoundCloud"
+                >
+            </a>
             <p>
             <a href="https://soundcloud.com/malzmonday/immaculate-conception" target="_blank">
                 <img
@@ -164,10 +171,13 @@
                 <b>Reckless</b> <i>Shamana</i> 2:45
                 <i class="fa-solid fa-music fa-bounce"></i>
         </p>
-            <img
-                src="images/RECKLESS_Shamana.jpeg"
-                width="200"
-            >
+            <a href="https://soundcloud.com/shamanabeats/reckless" target="_blank">
+                <img
+                    src="images/RECKLESS_Shamana.jpeg"
+                    width="200"
+                    alt="album cover provided by SoundCloud"
+                >
+            </a>
         <p>
             <a href="https://soundcloud.com/kaliuchis/telepatia" target="_blank">
                 <img
