Divs-Spans-Flows2

--- a/demos/divs-spans-flow-demo/index.html
+++ b/demos/divs-spans-flow-demo/index.html
@@ -4,11 +4,22 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="Divs, Spans, and Flow" href="css/name.css">
+        <link rel="stylesheet" href="css/name.css">
     </head>
     <body>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia iusto pariatur voluptatem quae reprehenderit architecto nihil unde placeat ipsa. Est aliquid ratione consequuntur dolorum reprehenderit quasi repudiandae adipisci maiores alias?
         </p>
+        <span>This is a span</span>
+        <span>This is another span</span>
+        <div>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo quibusdam nesciunt delectus error. Quidem fugiat enim ipsam, voluptate expedita a sint quas voluptates eligendi debitis cupiditate eaque repellendus saepe. Rem.
+        </div>
+        <div class="narrow">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorum porro dolor aliquam laudantium nisi numquam beatae doloribus praesentium, earum iure quo odit maxime vel quia culpa aliquid vitae sed!
+        </div>
+        <div class="narrow">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure porro ad similique cupiditate maiores quam voluptates aliquid hic quia incidunt explicabo, dicta aperiam ipsa, corrupti quasi? Itaque rerum soluta nostrum.
+        </div>
     </body>
 </html>
