--- a/drills/document-flow-drills/index.html
+++ b/drills/document-flow-drills/index.html
@@ -97,7 +97,7 @@
                     </p>
                 </div>
                 <div id="d5-div2" class="d5-div">
-                    <h2>An Exciting End</h2>
+                    <h2>A Brilliant Beginning</h2>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur 
                         adipisicing elit. Ipsum eligendi velit 
