--- a/secret-love/index.html
+++ b/secret-love/index.html
@@ -33,8 +33,8 @@ body{
     background: rgba(255, 255, 255, 0.55);
     cursor: pointer;
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
+    width: 80px;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -100,6 +100,18 @@ body{
           <div class="images">
             <img src="images/IMG_2475.jpg" alt="flower 4" />
             <div class="image-text">I Need to Figure Out Videos</div>
+          </div>
+          <div class="images">
+            <video width="320" height="240" controls>
+              <source src="images/movie1.MOV">
+            </video>
+            <div class="image-text">I Need to Figure Out Videos</div>
+          </div>
+          <div class="images">
+            <video width="320" height="240" controls>
+              <source src="images/movie2.mov">
+            </video>
+            <div class="image-text">I did it!</div>
           </div>
     </div>
 </div>
