--- a/demos/combining-selectors-demo/index.html
+++ b/demos/combining-selectors-demo/index.html
@@ -3,10 +3,51 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Combining Selectors Demo</title>
         <link rel="stylesheet" href="css/name.css">
     </head>
     <body>
-        
+        <div id="navbar">
+            <a href="#">HOME</a>
+            <a href="#">ABOUT</a>
+            <a href="#">CONTACT</a>
+        </div>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            <a href="#">Temporibus quisquam</a>
+            earum corporis unde iste quia quod animi.
+            <a href="#">Distinctio quia voluptate</a>
+            blanditiis quam eius facilis,
+            <a href="#">necessitatibus</a>
+            facere, vitae earum sequi quidem!
+        </p>
+        <p class="warning">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            <a href="#">Temporibus quisquam</a>
+            earum corporis unde iste quia quod animi.
+            <a href="#">Distinctio quia voluptate</a>
+            blanditiis quam eius facilis,
+            <a href="#">necessitatibus</a>
+            facere, vitae earum sequi quidem!
+        </p>
+        <ul>
+            <li>
+                <a href="#">Item 1</a>
+            </li>
+            <li>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident 
+                    <a href="#">non excepturi ratione</a>
+                    repudiandae doloremque assumenda!
+                </p>
+            </li>
+            <li>
+                <div>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident 
+                    <a href="#">non excepturi ratione</a>
+                    repudiandae doloremque assumenda!
+                </div>
+            </li>
+        </ul>
     </body>
 </html>
