--- a/exercises/alley-posters/index.html
+++ b/exercises/alley-posters/index.html
@@ -15,45 +15,39 @@
                 <div class="wall back"></div>
                 <div class="floor"></div>
                 <div class="showing-area">
-
                     <div class="display-space">
                         <!-- Add your code for your 1st poster/piece here -->
                         <div class="poster-1">
                             <div>
                                 <img
-                                    src="images/poster2.jpg"
+                                    src="images/spike1.jpeg"
                                     alt="poster1"
                                 >
                             </div>
                         </div>
-
                     </div>
-
                     <div class="display-space">
                         <!-- Add your code for your 2nd poster/piece here -->
                         <div class="poster-2">
                             <div>
                                 <img
-                                    src="images/poster1.jpg"
+                                    src="images/spike2.jpeg"
                                     alt="poster2"
                                 >
                             </div>
                         </div>
-                        
                     </div>
-
                     <div class="display-space">
                         <!-- Add your code for your 3rd poster/piece here -->
                         <div class="poster-3">
                             <div>
                                 <img
-                                    src="images/poster3.jpg"
+                                    src="images/spike3.jpeg"
                                     alt="poster3"
                                 >
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
