--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About</title>
+        <link rel="stylesheet" href="css/about.css">
     </head>
     <body>
         <h1>About</h1>
@@ -12,4 +13,21 @@
         <a href="contact.html">Contact</a>
         <a href="about.html">About</a>
     </body>
+    <hr>
+    <div class="opening-paragraph">
+        <h2>
+            Hello! My name is Kaelyn Kluding.
+            <i>But call me Kae.</i>
+        </h2>
+        <img
+            src="images/kae.JPG"
+            alt="selfie"
+        >
+        <p>
+            I am (almost) 22 years old and  I was born in Des Moines, Iowa but I currenly live in Jacksonville, Florida. I've lived here most of my life, but I still like to tell people that Iowa will always be my home. I have a wonderful boyfriend and we have a cat-child named Bradley.
+        </p>
+        <p>
+            I have always had a deep interest in all things art. From incoherent scribbles when I was a child, to creative complex portraits when I entered high school, art has always held a place in my life. While I dont always finished my pieces, I constantly have a new idea forming in my mind; whether it be a digital painting, a quick sketch, or a logo for a made up company.
+        </p>
+    </div>
 </html>
