--- a/demos/absolute-vs-relative-units-demo/index.html
+++ b/demos/absolute-vs-relative-units-demo/index.html
@@ -23,5 +23,16 @@
             src="https://images.pexels.com/photos/17960333/pexels-photo-17960333.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load"
             alt="cool window"
         >
+        <div class="outer-container">
+            <div class="inner-container">
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis provident saepe id nobis vero ad officiis eaque voluptatem eius vel vitae, sunt tempore dolore ipsam optio facilis repellendus commodi consectetur.
+                </p>
+                <img
+                    src="https://images.pexels.com/photos/16241289/pexels-photo-16241289/free-photo-of-woman-with-drawing-on-face-in-creative-motion.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load"
+                    alt="mirrored lady"
+                >
+            </div>
+        </div>
     </body>
 </html>
