--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <a href="about.html">About</a>
     </body>
     <hr>
-    <div class="opening-paragraph">
+    <div>
         <h2>
             Hello! My name is Kaelyn Kluding.
             <i>But call me Kae.</i>
@@ -23,10 +23,10 @@
             src="images/kae.JPG"
             alt="selfie"
         >
-        <p>
-            I am (almost) 22 years old and  I was born in Des Moines, Iowa but I currenly live in Jacksonville, Florida. I've lived here most of my life, but I still like to tell people that Iowa will always be my home. I have a wonderful boyfriend and we have a cat-child named Bradley.
+        <p class="paragraph-1">
+            I am (almost) 22 years old and  I was born in Des Moines, Iowa but I currenly live in Jacksonville, Florida. I've lived here most of my life, but I still like to tell people that Iowa will always be my home. I have a wonderful boyfriend and we have a cat-child named Bradley. 
         </p>
-        <p>
+        <p class="paragraph-2">
             I have always had a deep interest in all things art. From incoherent scribbles when I was a child, to creative complex portraits when I entered high school, art has always held a place in my life. While I dont always finished my pieces, I constantly have a new idea forming in my mind; whether it be a digital painting, a quick sketch, or a logo for a made up company.
         </p>
     </div>
