--- a/exercises/product-showcase-site/index.html
+++ b/exercises/product-showcase-site/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Product Showcase</title>
+        <title>Honey Wildflower</title>
         <link rel="stylesheet" href="css/name.css">
     </head>
     <body>
