--- a/license/index.html
+++ b/license/index.html
@@ -26,9 +26,9 @@
                     <div id="address">
                         Kaelyn Kluding
                         <br>
-                        456 ANYWHERE STREET
+                        123 Cunningham Creek Dr.
                         <br>
-                        Jacksonville, FL 42714
+                        Jacksonville, FL 32259
                     </div>
                     <div id="personal-info">
                         <div id="small-pic">
