--- a/flexbox-intro-demo/index.html
+++ b/flexbox-intro-demo/index.html
@@ -8,10 +8,12 @@
     </head>
     <body>
         <div class="section1">
-            <img
-                src="https://images.pexels.com/photos/17683268/pexels-photo-17683268/free-photo-of-bouquet-with-sunflowers-in-glass-vase.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load"
-                alt="sunflowers"
-            >
+            <div>
+                <img class="img-contain"
+                    src="https://images.pexels.com/photos/17683268/pexels-photo-17683268/free-photo-of-bouquet-with-sunflowers-in-glass-vase.jpeg?auto=compress&cs=tinysrgb&w=1600&lazy=load"
+                    alt="sunflowers"
+                >
+            </div>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione atque soluta et sunt repellat laboriosam optio maxime libero perferendis nostrum, at expedita dignissimos delectus. Laboriosam alias recusandae et magni vero.
             </p>
