two-column-layouts-flex-demo

--- a/demos/two-column-layouts-flex-demo/index.html
+++ b/demos/two-column-layouts-flex-demo/index.html
@@ -7,6 +7,29 @@
         <link rel="stylesheet" href="css/name.css">
     </head>
     <body>
-        
+        <div id="two-columns">
+            <div id="sidebar">
+                <h2>Logo</h2>
+                <ul>
+                    <li> <a href="#">Link 1</a> </li>
+                    <li> <a href="#">Link 2</a> </li>
+                    <li> <a href="#">Link 3</a> </li>
+                    <li> <a href="#">Link 4</a> </li>
+                </ul>
+            </div>
+            <div class="main-content">
+                <h1>Two Columns - Flex</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit, provident. Delectus nostrum modi doloremque, at reiciendis alias est aliquid quod minima, nihil quae molestiae eius in incidunt ea optio voluptas!
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, necessitatibus et? Beatae exercitationem mollitia maiores cum omnis ducimus perspiciatis alias aliquam illum blanditiis hic maxime ab iusto fugit, ipsum incidunt.
+                </p>
+                <h3>Lorem ipsum dolor</h3>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi, est! Quidem libero impedit nesciunt corrupti quae, maxime accusantium fuga totam eius error rerum, voluptates beatae dignissimos ut tenetur asperiores omnis.
+                </p>
+            </div>
+        </div>
     </body>
 </html>
