--- a/exercises/wiki-with-sidebar/index.html
+++ b/exercises/wiki-with-sidebar/index.html
@@ -11,47 +11,50 @@
             <div class="sidebar">
                 <h2>Contents</h2>
                 <ul>
-                    <li> <a href="#">Description</a> </li>
-                    <li> <a href="#">Taxonomy</a> </li>
-                    <li> <a href="#">Behavior</a> </li>
-                    <li> <a href="#">Habitat</a> </li>
-                    <li> <a href="#">Diet</a> </li>
-                    <li> <a href="#">Reproduction</a> </li>
+                    <li> <a href="#description">Description</a> </li>
+                    <li> <a href="#taxonomy">Taxonomy</a> </li>
+                    <li> <a href="#behavior">Behavior</a> </li>
+                    <li> <a href="#habitat">Habitat</a> </li>
+                    <li> <a href="#diet">Diet</a> </li>
+                    <li> <a href="#reproduction">Reproduction</a> </li>
                 </ul>
             </div>
             <div class="main-content">
                 <h1>Red-Tailed Hawk</h1>
-                <div class="Description">
+                <div id="description">
                     <h3>Description</h3>
                     <p>
-                        Red-tailed hawk plumage can be variable, depending on the subspecies and the region. These color variations are morphs, and are not related to molting. Most adult red-tails have a dark-brown nape and upper head, which gives them a somewhat hooded appearance, while the throat can variably present a lighter brown "necklace". Especially in younger birds, the underside may be otherwise covered with dark-brown spotting, and some adults may too manifest this stippling. The back is usually a slightly darker brown than elsewhere with paler scapular feathers, ranging from tawny to white, forming a variable imperfect "V" on the back. The tail of most adults, which gives this species its name, is rufous brick-red above with a variably sized, black subterminal band and generally appears light buff-orange from below. In comparison, the typical pale immatures (i.e. less than two years old) typically have a mildly paler headed and tend to show a darker back than adults with more apparent pale wing-feather edges above.
+                        Red-tailed hawk plumage can be variable, depending on the subspecies and the region. These color variations are morphs, and are not related to molting. Most adult red-tails have a dark-brown nape and upper head, which gives them a somewhat hooded appearance, while the throat can variably present a lighter brown "necklace". Especially in younger birds, the underside may be otherwise covered with dark-brown spotting, and some adults may too manifest this stippling.
+                    </p>
+                    <p>
+                        The back is usually a slightly darker brown than elsewhere with paler scapular feathers, ranging from tawny to white, forming a variable imperfect "V" on the back. The tail of most adults, which gives this species its name, is rufous brick-red above with a variably sized, black subterminal band and generally appears light buff-orange from below. In comparison, the typical pale immatures (i.e. less than two years old) typically have a mildly paler headed and tend to show a darker back than adults with more apparent pale wing-feather edges above.
                     </p>
                 </div>
-                <div class="taxonomy">
+                <div id="taxonomy">
                     <h3>Taxonomy</h3>
                     <p>
                         he red-tailed hawk is a member of the subfamily Buteoninae, which includes about 55 currently recognized species. Diverse in plumage appearance, habitat, prey, and nesting preferences, buteonine hawks are nonetheless typically medium- to large-sized hawks with ample wings (while some fossil forms are very large, larger than any eagle alive today). The red-tailed hawk is a member of the genus Buteo, a group of medium-sized raptors with robust bodies and broad wings. Members of this genus are known as "buzzards" in Eurasia, but "hawks" in North America. Under current classification, the genus includes about 29 species, the second-most diverse of all extant accipitrid genera behind only Accipiter.
                     </p>
                 </div>
-                <div class="behavior">
+                <div id="behavior">
                     <h3>Behavior</h3>
                     <p>
                         The red-tailed hawk is highly conspicuous to humans in much of its daily behavior. Most birds in resident populations, which are well more than half of all red-tailed hawks, usually split nonbreeding-season activity between territorial soaring flight and sitting on a perch. Often, perching is for hunting purposes, but many sit on a tree branch for hours, occasionally stretching on a single wing or leg to keep limber, with no signs of hunting intent. In flight, this hawk soars with wings often in a slight dihedral, flapping as little as possible to conserve energy. Soaring is by far the most efficient method of flight for red-tailed hawks, so is used more often than not. Active flight is slow and deliberate, with deep wing beats. Wing beats are somewhat less rapid in active flight than in most other Buteo hawks, even heavier species such as ferruginous hawks tend to flap more swiftly, due to the morphology of the wings.
                     </p>
                 </div>
-                <div class="habitat">
+                <div id="habitat">
                     <h3>Habitat</h3>
                     <p>
                         Red-tailed hawks have shown the ability to become habituated to almost any habitat present in North and Central America. Their preferred habitat is mixed forest and field, largely woodland edge with tall trees or alternately high bluffs that may be used as nesting and perching sites. They occupy a wide range of habitats and altitudes, including deserts, grasslands, nearly any coastal or wetland habitat, mountains, foothills, coniferous and deciduous woodlands, and tropical rainforests. Agricultural fields and pastures, which are more often than not varied with groves, ridges, or streamside trees in most parts of America, may make nearly ideal habitat for breeding or wintering red-tails.
                     </p>
                 </div>
-                <div class="diet">
+                <div id="diet">
                     <h3>Diet</h3>
                     <p>
                         he red-tailed hawk is carnivorous, and a highly opportunistic feeder. Nearly any small animal they encounter may be viewed as potential food. Their most common prey are small mammals such as rodents and lagomorphs, but they also consume birds, reptiles, fish, amphibians, and invertebrates. Prey varies considerably with regional and seasonal availability, but usually centers on rodents, accounting for up to 85% of a hawk's diet.
                     </p>
                 </div>
-                <div class="Reproduction">
+                <div id="reproduction">
                     <h3>Reproduction</h3>
                     <p>
                         Pairs either court for the first time or engage in courtship rituals to strengthen pre-existing pair bonds before going into the breeding. The breeding season usually begins in late February through March, but can commence as early as late December in Arizona and late January in Wisconsin or to the opposite extreme as late as mid-April as in Alberta. In this pre-nesting period, high-circling with much calling will occur. One or both members of a pair may be involved. The courtship display often involves dangling legs, at times the pair will touching each other's wings and male's feet may touch female's back, she may occasionally roll over and present talons.
