--- a/exercises/wiki-with-sidebar/index.html
+++ b/exercises/wiki-with-sidebar/index.html
@@ -23,9 +23,13 @@
                 <h1>Red-Tailed Hawk</h1>
                 <div id="description">
                     <h3>Description</h3>
-                    <p>
+                    <p id="firstp">
                         Red-tailed hawk plumage can be variable, depending on the subspecies and the region. These color variations are morphs, and are not related to molting. Most adult red-tails have a dark-brown nape and upper head, which gives them a somewhat hooded appearance, while the throat can variably present a lighter brown "necklace". Especially in younger birds, the underside may be otherwise covered with dark-brown spotting, and some adults may too manifest this stippling.
                     </p>
+                    <img
+                        src="images/hawk2.jpeg"
+                        alt=""
+                    >
                     <p>
                         The back is usually a slightly darker brown than elsewhere with paler scapular feathers, ranging from tawny to white, forming a variable imperfect "V" on the back. The tail of most adults, which gives this species its name, is rufous brick-red above with a variably sized, black subterminal band and generally appears light buff-orange from below. In comparison, the typical pale immatures (i.e. less than two years old) typically have a mildly paler headed and tend to show a darker back than adults with more apparent pale wing-feather edges above.
                     </p>
